tests/NormalTests/paczka1/small_fuzzy/48955217.err
Error in line 1: 0df5SBSWpt A9f4 50,0
Error in line 4: qSuvo A914 78,6
